--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -103,6 +103,7 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
+allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -822,6 +823,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
+allow 2001:9b0:253:f700::913;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:d5b3::b;
 allow 2001:b030:2422::7234;
@@ -1263,6 +1265,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1702,6 +1705,7 @@ allow 3.110.92.168;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1712,7 +1716,6 @@ allow 37.228.129.189;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1813,6 +1816,7 @@ allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1886,7 +1890,6 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.18.215.82;
-allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.48.28.239;
