--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -100,6 +100,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
+allow 2001:9b0:253:f700::913;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:d5b3::b;
 allow 2001:b030:2422::7234;
@@ -347,6 +348,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
