--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -124,7 +124,7 @@ deny 114.35.245.150;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
-deny 118.6.31.67;
+deny 118.9.194.189;
 deny 121.127.37.151;
 deny 121.78.28.166;
 deny 123.253.35.32;
@@ -822,7 +822,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
-deny 2001:67c:e28:1::103;
 deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
@@ -1270,6 +1269,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1772,7 +1772,6 @@ deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.154.98.236;
 deny 45.157.11.6;
-deny 45.159.250.144;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1823,6 +1822,7 @@ deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1883,7 +1883,6 @@ deny 62.133.45.2;
 deny 62.133.63.146;
 deny 62.171.137.169;
 deny 62.182.84.146;
-deny 64.190.76.13;
 deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
