--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -96,7 +96,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
-deny 2001:67c:e28:1::103;
 deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
@@ -350,6 +349,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
