--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -573,6 +573,8 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
+allow 192.121.108.119;
+allow 192.121.108.120;
 allow 192.124.180.154;
 allow 192.210.160.31;
 allow 192.210.160.35;
@@ -988,6 +990,7 @@ allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1055,6 +1058,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1334,6 +1338,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1381,6 +1386,8 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
+allow 2a09:be40:28ff:50:be24:11ff:fe57:e258;
+allow 2a09:be40:28ff:50:be24:11ff:fecb:2a2f;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1847,6 +1854,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1905,6 +1913,7 @@ allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.124.60.174;
+allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
