--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -573,6 +573,8 @@ set_real_ip_from 190.103.179.98;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
+set_real_ip_from 192.121.108.119;
+set_real_ip_from 192.121.108.120;
 set_real_ip_from 192.124.180.154;
 set_real_ip_from 192.210.160.31;
 set_real_ip_from 192.210.160.35;
@@ -878,6 +880,7 @@ set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -1059,6 +1062,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1117,6 +1121,7 @@ set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.96;
 set_real_ip_from 79.124.60.174;
+set_real_ip_from 79.127.129.160;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
