--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -945,6 +945,7 @@ deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
 deny 205.185.113.8;
+deny 205.185.116.215;
 deny 205.185.116.34;
 deny 205.185.117.149;
 deny 205.185.118.31;
@@ -990,6 +991,7 @@ deny 23.137.254.137;
 deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
+deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
@@ -1051,6 +1053,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
@@ -1717,6 +1720,7 @@ deny 3.110.92.168;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1727,7 +1731,6 @@ deny 37.228.129.189;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1779,6 +1782,7 @@ deny 45.141.215.97;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.154.98.236;
+deny 45.157.11.6;
 deny 45.159.250.144;
 deny 45.61.185.172;
 deny 45.61.186.203;
