--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1029,6 +1029,7 @@ set_real_ip_from 23.191.200.9;
 set_real_ip_from 23.236.122.193;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.167;
+set_real_ip_from 23.94.80.229;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
@@ -1255,6 +1256,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1721,7 +1723,6 @@ set_real_ip_from 3.110.92.168;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1732,6 +1733,7 @@ set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1783,6 +1785,7 @@ set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.154.98.236;
+set_real_ip_from 45.157.11.6;
 set_real_ip_from 45.159.250.144;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
@@ -1947,6 +1950,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
@@ -2006,6 +2010,7 @@ set_real_ip_from 94.72.103.33;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
+set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
